# agentify-logistics

./: .gitignore  AGENTS.md  PROJECT_BRIEF.md  README.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  app-config-template.yaml  compose_db.yaml  docker-compose.yml  endpoints.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260608_0001_initial_schema.py  20260610_0002_expand_gmail_attachment_id.py  20260610_0003_add_attachment_extracted_record.py
backend/api/: __init__.py  config.py  dependencies.py  models.py
backend/api/routes/: api_main.py  emails.py  (+7 more)
backend/config/: __init__.py  app.py  auth.py  database_config.py  gmail_config.py  models.py  settings.py
backend/db/: database.py  models.py
backend/gmail_service/: __init__.py  adapter.py  auth.py  config.py  fetcher.py  field_extract.py  models.py  pdf_reader.py  pipeline.py  runner.py  state.py
backend/scripts/: generate_demo_email_corpus.py  reset_database.py  seed_demo_data.py  seed_demo_via_api.py  send_demo_emails.py
backend/services/: aggregation_service.py  app_home_service.py  container_service.py  gmail_connection_service.py  gmail_ingestion_service.py  ingestion_service.py  sync_job_service.py
backend/tests/: test_app_home_service.py  test_attachment_routes.py  test_database_config.py  test_db_init.py  test_db_models.py  test_generate_demo_email_corpus.py  test_gmail_adapter.py  test_gmail_fetcher.py  test_gmail_pipeline.py  test_gmail_sync_service.py  test_seed_demo_data.py  test_send_demo_emails.py  test_sync_job_service.py
(+86 files in other folders)
