[project]
name = "agentify-logistics-backend"
version = "0.1.0"
description = "Backend API and database layer for the Agentify Logistics prototype."
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "fastapi==0.115.2",
  "uvicorn==0.34.2",
  "sqlalchemy==2.0.48",
  "asyncpg==0.31.0",
  "psycopg[binary]==3.3.3",
  "alembic==1.18.1",
  "pydantic==2.8.2",
  "python-dotenv==1.0.0",
  "pyyaml==6.0.2",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.basedpyright]
typeCheckingMode = "basic"
